--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 			#header.uk-sticky-below {
 				box-shadow: 0 2px 14px 0 rgba(0,0,0,0.07);
 			}
-			
 		</style>
 	<script>try {
                         Object.defineProperty(screen, "availTop", { value: 0 });
@@ -77,16 +76,16 @@
         </script></head>
 	<body>
 		<!--HEADER-->
-		<header id="header" style="background-color: #fff;" data-uk-sticky="show-on-up: true; animation: uk-animation-fade; media: @l" class="uk-sticky">
+		<header id="header" style="background-color: #151515;" data-uk-sticky="show-on-up: true; animation: uk-animation-fade; media: @l" class="uk-sticky">
 			<div class="uk-container">
 				<nav id="navbar" data-uk-navbar="mode: click;" class="uk-navbar">
 					<div class="uk-navbar-left nav-overlay uk-visible@m">
 						<ul class="uk-navbar-nav">
 							<li>
-								<a href="#" title="Subscribe">Know the Developers</a>
+								<a href="#" style="color:white" title="Subscribe">Know the Developers</a>
 							</li>
 							<li>
-								<a href="#" title="Sign Up">Sign Up</a>
+								<a href="#" style="color:white" title="Sign Up">Sign Up</a>
 							</li>
 						</ul>
 					</div>
@@ -94,19 +93,20 @@
 						<a class="uk-navbar-item uk-logo" href="#" title="Logo"><img src="index_files/AlohaCC.png" alt="Logo"></a>
 					</div>
 					<div class="uk-navbar-right nav-overlay">
-						<a class="uk-navbar-toggle uk-visible@m uk-icon uk-search-icon" data-uk-search-icon="" data-uk-toggle="target: .nav-overlay; animation: uk-animation-fade" href="#"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="search-icon"><circle fill="none" stroke="#000" stroke-width="1.1" cx="9" cy="9" r="7"></circle><path fill="none" stroke="#000" stroke-width="1.1" d="M14,14 L18,18 L14,14 Z"></path></svg></a>
+						<a class="uk-navbar-toggle uk-visible@m uk-icon uk-search-icon" style="color: white;"
+						data-uk-search-icon="" data-uk-toggle="target: .nav-overlay; animation: uk-animation-fade" href="#"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="search-icon"><circle fill="none" stroke="#000" stroke-width="1.1" cx="9" cy="9" r="7"></circle><path fill="none" stroke="#000" stroke-width="1.1" d="M14,14 L18,18 L14,14 Z"></path></svg></a>
 						<div class="uk-navbar-item">
-							<a class="uk-visible@s uk-icon" style="margin-right: 4px" href="#" data-uk-icon="facebook"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="facebook"><path d="M11,10h2.6l0.4-3H11V5.3c0-0.9,0.2-1.5,1.5-1.5H14V1.1c-0.3,0-1-0.1-2.1-0.1C9.6,1,8,2.4,8,5v2H5.5v3H8v8h3V10z"></path></svg></a>
-							<a class="uk-visible@s uk-icon" style="margin-right: 4px" href="#" data-uk-icon="twitter"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="twitter"><path d="M19,4.74 C18.339,5.029 17.626,5.229 16.881,5.32 C17.644,4.86 18.227,4.139 18.503,3.28 C17.79,3.7 17.001,4.009 16.159,4.17 C15.485,3.45 14.526,3 13.464,3 C11.423,3 9.771,4.66 9.771,6.7 C9.771,6.99 9.804,7.269 9.868,7.539 C6.795,7.38 4.076,5.919 2.254,3.679 C1.936,4.219 1.754,4.86 1.754,5.539 C1.754,6.82 2.405,7.95 3.397,8.61 C2.79,8.589 2.22,8.429 1.723,8.149 L1.723,8.189 C1.723,9.978 2.997,11.478 4.686,11.82 C4.376,11.899 4.049,11.939 3.713,11.939 C3.475,11.939 3.245,11.919 3.018,11.88 C3.49,13.349 4.852,14.419 6.469,14.449 C5.205,15.429 3.612,16.019 1.882,16.019 C1.583,16.019 1.29,16.009 1,15.969 C2.635,17.019 4.576,17.629 6.662,17.629 C13.454,17.629 17.17,12 17.17,7.129 C17.17,6.969 17.166,6.809 17.157,6.649 C17.879,6.129 18.504,5.478 19,4.74"></path></svg></a>
-							<a class="uk-visible@s uk-icon" style="margin-right: 4px" href="#" data-uk-icon="instagram"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="instagram"><path d="M13.55,1H6.46C3.45,1,1,3.44,1,6.44v7.12c0,3,2.45,5.44,5.46,5.44h7.08c3.02,0,5.46-2.44,5.46-5.44V6.44 C19.01,3.44,16.56,1,13.55,1z M17.5,14c0,1.93-1.57,3.5-3.5,3.5H6c-1.93,0-3.5-1.57-3.5-3.5V6c0-1.93,1.57-3.5,3.5-3.5h8 c1.93,0,3.5,1.57,3.5,3.5V14z"></path><circle cx="14.87" cy="5.26" r="1.09"></circle><path d="M10.03,5.45c-2.55,0-4.63,2.06-4.63,4.6c0,2.55,2.07,4.61,4.63,4.61c2.56,0,4.63-2.061,4.63-4.61 C14.65,7.51,12.58,5.45,10.03,5.45L10.03,5.45L10.03,5.45z M10.08,13c-1.66,0-3-1.34-3-2.99c0-1.65,1.34-2.99,3-2.99s3,1.34,3,2.99 C13.08,11.66,11.74,13,10.08,13L10.08,13L10.08,13z"></path></svg></a>
-							<a class="uk-navbar-toggle uk-hidden@m uk-icon uk-navbar-toggle-icon" data-uk-toggle="" data-uk-navbar-toggle-icon="" href="#offcanvas-nav"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="navbar-toggle-icon"><rect y="9" width="20" height="2"></rect><rect y="3" width="20" height="2"></rect><rect y="15" width="20" height="2"></rect></svg></a>
+							<a class="uk-visible@s uk-icon" style="margin-right: 4px; color: white" href="#" data-uk-icon="facebook"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="facebook"><path d="M11,10h2.6l0.4-3H11V5.3c0-0.9,0.2-1.5,1.5-1.5H14V1.1c-0.3,0-1-0.1-2.1-0.1C9.6,1,8,2.4,8,5v2H5.5v3H8v8h3V10z"></path></svg></a>
+							<a class="uk-visible@s uk-icon" style="margin-right: 4px; color: white" href="#" data-uk-icon="twitter"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="twitter"><path d="M19,4.74 C18.339,5.029 17.626,5.229 16.881,5.32 C17.644,4.86 18.227,4.139 18.503,3.28 C17.79,3.7 17.001,4.009 16.159,4.17 C15.485,3.45 14.526,3 13.464,3 C11.423,3 9.771,4.66 9.771,6.7 C9.771,6.99 9.804,7.269 9.868,7.539 C6.795,7.38 4.076,5.919 2.254,3.679 C1.936,4.219 1.754,4.86 1.754,5.539 C1.754,6.82 2.405,7.95 3.397,8.61 C2.79,8.589 2.22,8.429 1.723,8.149 L1.723,8.189 C1.723,9.978 2.997,11.478 4.686,11.82 C4.376,11.899 4.049,11.939 3.713,11.939 C3.475,11.939 3.245,11.919 3.018,11.88 C3.49,13.349 4.852,14.419 6.469,14.449 C5.205,15.429 3.612,16.019 1.882,16.019 C1.583,16.019 1.29,16.009 1,15.969 C2.635,17.019 4.576,17.629 6.662,17.629 C13.454,17.629 17.17,12 17.17,7.129 C17.17,6.969 17.166,6.809 17.157,6.649 C17.879,6.129 18.504,5.478 19,4.74"></path></svg></a>
+							<a class="uk-visible@s uk-icon" style="margin-right: 4px; color: white" href="#" data-uk-icon="instagram"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="instagram"><path d="M13.55,1H6.46C3.45,1,1,3.44,1,6.44v7.12c0,3,2.45,5.44,5.46,5.44h7.08c3.02,0,5.46-2.44,5.46-5.44V6.44 C19.01,3.44,16.56,1,13.55,1z M17.5,14c0,1.93-1.57,3.5-3.5,3.5H6c-1.93,0-3.5-1.57-3.5-3.5V6c0-1.93,1.57-3.5,3.5-3.5h8 c1.93,0,3.5,1.57,3.5,3.5V14z"></path><circle cx="14.87" cy="5.26" r="1.09"></circle><path d="M10.03,5.45c-2.55,0-4.63,2.06-4.63,4.6c0,2.55,2.07,4.61,4.63,4.61c2.56,0,4.63-2.061,4.63-4.61 C14.65,7.51,12.58,5.45,10.03,5.45L10.03,5.45L10.03,5.45z M10.08,13c-1.66,0-3-1.34-3-2.99c0-1.65,1.34-2.99,3-2.99s3,1.34,3,2.99 C13.08,11.66,11.74,13,10.08,13L10.08,13L10.08,13z"></path></svg></a>
+							<a class="uk-navbar-toggle uk-hidden@m uk-icon uk-navbar-toggle-icon" style="color:white" data-uk-toggle="" data-uk-navbar-toggle-icon="" href="#offcanvas-nav"><svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="navbar-toggle-icon"><rect y="9" width="20" height="2"></rect><rect y="3" width="20" height="2"></rect><rect y="15" width="20" height="2"></rect></svg></a>
 						</div>
 						
 					</div>
 					<div class="nav-overlay uk-navbar-left uk-flex-1" hidden="">
 						<div class="uk-navbar-item uk-width-expand">
 							<form class="uk-search uk-search-navbar uk-width-1-1">
-								<input class="uk-search-input" type="search" placeholder="Search...">
+								<input id="navSearch" class="uk-search-input" type="search" placeholder="Search...">
 							</form>
 						</div>
 						<a class="uk-navbar-toggle uk-icon uk-close" data-uk-close="" data-uk-toggle="target: .nav-overlay; animation: uk-animation-fade" href="#"><svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg" data-svg="close-icon"><line fill="none" stroke="#000" stroke-width="1.1" x1="1" y1="1" x2="13" y2="13"></line><line fill="none" stroke="#000" stroke-width="1.1" x1="13" y1="1" x2="1" y2="13"></line></svg></a>
@@ -116,7 +116,7 @@
 		</header><div class="uk-sticky-placeholder" style="height: 80px; margin: 0px;" hidden=""></div>
 		<!--/HEADER-->
 		<!-- FEATURED -->
-		<div class="uk-container">
+		<div class="uk-container uk-margin-medium-top">
 			<h4 class="uk-heading-line uk-text-bold"><span>Suggested Food Viands</span></h4>
 			<div data-uk-slider="velocity: 5" class="uk-slider">
 				<div class="uk-position-relative">
@@ -279,6 +279,29 @@
 												style="background-color: #32d296" type="button">Add Food</button></br>
 												<button class="uk-margin-top uk-button uk-modal-close uk-button-text" type="button">Close</button>
 											</div>
+										</div>
+									</div>
+								</div>
+								<div class="uk-child-width-expand@s uk-text-center uk-margin-top" uk-grid>
+									<div>
+										<div class="uk-card uk-card-default uk-card-body"  style="background-color:#32d296">
+											<a style="font-size: 40px;color:white;" title="Food added">
+												2
+											</a></br><span style="font-weight:normal; color: whitesmoke">Food added</span>
+										</div>
+									</div>
+									<div>
+										<div class="uk-card uk-card-default uk-card-body"  style="background-color:#32d296">
+											<a style="font-size: 40px;color:white;" title="Calorie intake today">
+												675
+											</a></br><span style="font-weight:normal; color: whitesmoke">Calories intake today</span>
+										</div>
+									</div>
+									<div>
+										<div class="uk-card uk-card-default uk-card-body"  style="background-color:#32d296">
+											<a style="font-size: 40px;color:white;" title="Food added">
+												39
+											</a></br><span style="font-weight:normal; color: whitesmoke">Food archive diaries</span>
 										</div>
 									</div>
 								</div>
